rules/ingress-and-egress-blocked/test/ccnp-namespace-selector-k8s-prefixed-passed/input/ccnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: my-ns-allowlist
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: my-ns
  ingress:
  - fromEndpoints:
    - matchLabels: {}
  egress:
  - toEndpoints:
    - matchLabels: {}
